# Flo

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
docs/: features.md
docs/agents/: capitalist.md  quant.md  steward.md  strategist.md
src/: main.py  utils.py
src/agents/: __init__.py  state.py
src/agents/capitalist/: __init__.py  agent.py
src/agents/quant/: __init__.py  agent.py
src/agents/root/: __init__.py  agent.py  state.py
src/agents/steward/: __init__.py  agent.py
src/agents/strategist/: __init__.py  agent.py
src/config/: __init__.py  agent_config.py  agents.py  database.py  db_config.py  directory.py  directory_config.py  logging.py  logging_config.py
src/database/: __init__.py  investment.py  liability.py  relational.py  transaction.py  wishlist.py
src/memory/procedural/: add_to_wishlist.txt  can_i_afford.txt  create_budget.txt  create_goals.txt  insert_investment.txt  read_transactions.txt  update_investment.txt  write_liability.txt  write_transaction.txt
src/memory/semantic/: profile.json  userdata.db
src/tools/: __init__.py  agent_as_tool.py  capitalist.py  essential.py  handoffs.py  quant.py  steward.py  strategist.py  utils.py
