[project]
name = "flo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-google-genai>=3.0.3",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langsmith>=0.4.43",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
]
